; ModuleID = '/home/carl/AnghaBench/seafile/common/index/extr_index.c_add_name_hash.c'
source_filename = "/home/carl/AnghaBench/seafile/common/index/extr_index.c_add_name_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32, i32 }
%struct.cache_entry = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_name_hash(%struct.index_state* %0, %struct.cache_entry* %1) #0 {
  %3 = alloca %struct.index_state*, align 8
  %4 = alloca %struct.cache_entry*, align 8
  store %struct.index_state* %0, %struct.index_state** %3, align 8
  store %struct.cache_entry* %1, %struct.cache_entry** %4, align 8
  %5 = load %struct.index_state*, %struct.index_state** %3, align 8
  %6 = getelementptr inbounds %struct.index_state, %struct.index_state* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %9 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @g_strdup(i32 %10)
  %12 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %13 = call i32 @g_hash_table_insert(i32 %7, i32 %11, %struct.cache_entry* %12)
  ret void
}

declare dso_local i32 @g_hash_table_insert(i32, i32, %struct.cache_entry*) #1

declare dso_local i32 @g_strdup(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
